Task7/gatekeeper/constraint-templates/runasnonroot.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredsecuritycontext
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredSecurityContext
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredsecuritycontext

        # helper: получить pod.securityContext.runAsNonRoot если задан
        pod_run_as_non_root = val {
          val := input.review.object.spec.securityContext.runAsNonRoot
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          c := input.review.object.spec.containers[_]

          # runAsNonRoot должен быть true (на container или на pod)
          not run_as_non_root_true(c)
          msg := sprintf("container %v must set runAsNonRoot=true (or pod-level runAsNonRoot=true)", [c.name])
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          c := input.review.object.spec.containers[_]

          # readOnlyRootFilesystem обязателен true
          not readonly_rootfs_true(c)
          msg := sprintf("container %v must set readOnlyRootFilesystem=true", [c.name])
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          c := input.review.object.spec.containers[_]

          # Запрещаем root UID=0 (если указан явно)
          c.securityContext.runAsUser == 0
          msg := sprintf("container %v must not run as UID 0", [c.name])
        }

        run_as_non_root_true(c) {
          c.securityContext.runAsNonRoot == true
        }
        run_as_non_root_true(c) {
          pod_run_as_non_root == true
        }

        readonly_rootfs_true(c) {
          c.securityContext.readOnlyRootFilesystem == true
        }
